--- a/css/index.css
+++ b/css/index.css
@@ -17,8 +17,19 @@ ul {
     list-style: none;
 }
 
+h2 {
+    color: #7d7640;
+    font-size: 1.1em;
+    padding: 5px 0px;
+}
+
+p {
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+
 #container {
-    background: #ede9cc;
+    background: #ede9cc url(../assets/bg-container.png) top center repeat-y;
     margin: 0 auto;
     max-width: 1180px;
     min-width: 740px;
@@ -91,6 +102,57 @@ ul#navegaçao a:hover {
     background: #fdf6be;
 }
 
+#area-principal {
+    background: url(../assets/bg-area-principal.png) top left repeat-x;
+    float: left;
+    padding: 15px 0px; 
+    width: 50%;
+}
+
+#area-lateral {
+    background: url(../assets/bg-area-lateral.png) top left repeat-x;
+    float: right;
+    padding: 20px 0px; 
+    width: 50%;
+}
+
+#rodape {
+    background: #fff url(../assets/bg-rodape.png) repeat-x top;
+    clear: both;
+    color: #7d7640;
+    padding: 16px;
+    text-align: center;
+}
+
+#beneficios li a img {
+    float: left;
+    margin-right: 8px;    
+    width: 150px;
+}
+
+#beneficios li a p {
+    color: #000;
+    font-size: 0.8em;
+}
+
+#beneficios li a h3 {
+    background: url(../assets/ornamento.png) no-repeat center right;
+    color: #615b2d;
+    font-size: 1.1em;
+    padding: 5px 0;
+}
+
+#beneficios li {
+    border-bottom: 1px solid #f3efcb;
+    height: 6em;
+    padding: 8px;
+}
+
+#beneficios li:hover {
+    background: #f6f3d6;
+    cursor: pointer;
+}
+
 a.reserva {
     background: #a29750;
     color: #fff5b0;
@@ -114,4 +176,9 @@ a.reserva {
     float: right;
     height: 164px;
     width: 226px;
+}
+
+.conteudo {
+    margin: 0 auto;
+    width: 90%;
 }
